feat(project): scaffold project entity
