# internal/project/repository/models.go
@@ -1,0 +1,66 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package repository
+
+import (
+	"database/sql/driver"
+	"fmt"
+
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type ProjectVisibility string
+
+const (
+	ProjectVisibilityPublic  ProjectVisibility = "public"
+	ProjectVisibilityPrivate ProjectVisibility = "private"
+)
+
+func (e *ProjectVisibility) Scan(src interface{}) error {
+	switch s := src.(type) {
+	case []byte:
+		*e = ProjectVisibility(s)
+	case string:
+		*e = ProjectVisibility(s)
+	default:
+		return fmt.Errorf("unsupported scan type for ProjectVisibility: %T", src)
+	}
+	return nil
+}
+
+type NullProjectVisibility struct {
+	ProjectVisibility ProjectVisibility `json:"project_visibility"`
+	Valid             bool              `json:"valid"` // Valid is true if ProjectVisibility is not NULL
+}
+
+// Scan implements the Scanner interface.
+func (ns *NullProjectVisibility) Scan(value interface{}) error {
+	if value == nil {
+		ns.ProjectVisibility, ns.Valid = "", false
+		return nil
+	}
+	ns.Valid = true
+	return ns.ProjectVisibility.Scan(value)
+}
+
+// Value implements the driver Valuer interface.
+func (ns NullProjectVisibility) Value() (driver.Value, error) {
+	if !ns.Valid {
+		return nil, nil
+	}
+	return string(ns.ProjectVisibility), nil
+}
+
+type Project struct {
+	ID          pgtype.UUID        `db:"id" json:"id"`
+	OrgID       pgtype.UUID        `db:"org_id" json:"org_id"`
+	Key         string             `db:"key" json:"key"`
+	Name        string             `db:"name" json:"name"`
+	Description pgtype.Text        `db:"description" json:"description"`
+	Visibility  ProjectVisibility  `db:"visibility" json:"visibility"`
+	CreatedAt   pgtype.Timestamptz `db:"created_at" json:"created_at"`
+	UpdatedAt   pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
+	DeletedAt   pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
+}
